# labpubs

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: cli.md  conf.py  configuration.md  getting-started.md  github-issues.md  index.md  mcp.md
docs/api/: config.rst  core.rst  export.rst  github_issues.rst  index.rst  models.rst  sources.rst  store.rst
examples/: labpubs.yaml  members.csv  sync-publications.yml
labpubs/: __init__.py  cli.py  config.py  core.py  dedup.py  github_issues.py  mcp_server.py  models.py  normalize.py  resolve.py  store.py
labpubs/api/: __init__.py  app.py  deps.py
labpubs/api/routers/: exports.py  researchers.py  stats.py  works.py
labpubs/export/: __init__.py  bibtex.py  csl_json.py  cv_entries.py  grant_report.py  json_export.py
labpubs/ingest/: __init__.py  link_scholar_works.py  scholar_alerts.py
labpubs/notify/: __init__.py  email.py  slack.py
labpubs/sources/: __init__.py  base.py  crossref.py  openalex.py  semantic_scholar.py
tests/: conftest.py  test_core.py  test_dedup.py  test_funding.py  test_github_issues.py  test_notify_slack.py  test_resolve.py  test_s2_resolve.py
tests/test_api/: conftest.py  test_exports.py  test_researchers.py  test_stats.py  test_works.py
tests/test_export/: test_bibtex.py  test_csl_json.py  test_cv_entries.py  test_json_export.py
tests/test_ingest/: __init__.py  golden_alert.html  test_link_scholar_works.py  test_scholar_alerts.py
tests/test_sources/: test_crossref.py  test_openalex.py  test_semantic_scholar.py
