[project]
name = "labpubs"
version = "0.1.0"
description = "Publication tracking and retrieval for research labs"
requires-python = ">=3.11"
license = "MIT"
readme = "README.md"
authors = [{name = "Nic Weber", email = "nmweber@uw.edu"}]
keywords = [
    "publications",
    "research",
    "openalex",
    "bibtex",
    "bibliography",
    "academic",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Typing :: Typed",
]
dependencies = [
    "pyalex>=0.14",
    "semanticscholar>=0.8",
    "habanero>=1.2",
    "pydantic>=2.0",
    "mcp>=1.0",
    "httpx>=0.27",
    "click>=8.0",
    "pyyaml>=6.0",
    "rapidfuzz>=3.0",
    "bibtexparser>=1.4",
    "orjson>=3.9",
]

[project.optional-dependencies]
slack = ["slack-sdk>=3.0"]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "types-PyYAML",
]
docs = [
    "sphinx>=7.0",
    "furo",
    "sphinx-click",
    "myst-parser",
]

[project.scripts]
labpubs = "labpubs.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/nniiicc/labpubs"
Repository = "https://github.com/nniiicc/labpubs"
Documentation = "https://labpubs.readthedocs.io"
"Bug Tracker" = "https://github.com/nniiicc/labpubs/issues"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["labpubs"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "bibtexparser",
    "bibtexparser.bwriter",
    "habanero",
    "pyalex",
    "semanticscholar",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
